--- a/pairing.html
+++ b/pairing.html
@@ -157,7 +157,7 @@
                             document.getElementById('pairing-name').innerText = pairingDefinition[1];
 
                             if (pairingDefinition[2]) {
-                                document.getElementById('pairing-details').innerText = 'Son souhait est le suivant : ' + pairingDefinition[2].replace('(','').replace(')','');
+                                document.getElementById('pairing-details').innerText = 'Un petit indice pour lui faire plaisir : ' + pairingDefinition[2].replace('(','').replace(')','');
                             } else {
                                 document.getElementById('pairing-details').style.display = 'none';
                             }
@@ -175,9 +175,9 @@
                 </div>
             </div>
 
-            <!-- <a href="http://arcanis.github.io/secretsanta/" class="spirit-of-christmas"> -->
-            <!--     Want to start your own Secret Santa with your friends? Click here to get started! -->
-            <!-- </a> -->
+            <a href="http://routerov.github.io/" class="spirit-of-christmas">
+                Toi aussi tu veux faire un secret santa avec tes amis? Clique ici pour commencer!
+            </a>
 
         </div>
 
