--- a/pairing.html
+++ b/pairing.html
@@ -164,7 +164,7 @@
                         </script>
                     </div>
 
-                    <div class="title">Bon courage!</div>
+                    <div class="title">Joyeux Noël !</div>
 
                     <script>
                         if (queryString.extra) {
