--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
 		      Ajout de détails ou de la liste du souhait pour le participant entre parenthèse<br>
 		      Nicolas (l'elfe)<br>
 		      <br>
-		      Empécher une paire de se former avec !<br>
+		      Empêcher une paire de se former avec !<br>
 		      Maël !Aurélie<br>
 		      Aurélie !Maël<br>
 		      <br>
 		      Il est possible d'empêcher plusieurs paires pour un seul participant<br>
-		      Attention: Si il y a trop d'exclusion, ce n'est plus un vrai secret sant!<br>
+		      Attention: Si il y a trop d'exclusion, ce n'est plus un vrai secret santa!<br>
 		      Rodolphe !Santa !Nicolas (l'elfe)<br>
 		      <br>
 		      Il est aussi possible de tricher (mais ne le faites pas)<br>
